build(release): Set project version to 1.0.0-Stable
Updates the version in pom.xml in preparation for the first stable
release of the project.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.cloudutils4j</groupId>
     <artifactId>CloudUtils4J</artifactId>
-    <version>0.4-Alpha</version>
+    <version>1.0.0-Stable</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
